--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "enzyme-to-json": "^3.4.0",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
+    "numeral": "^2.0.6",
     "react": "^16.8.6",
     "react-dates": "^20.3.0",
     "react-dom": "^16.8.6",
@@ -39,6 +39,7 @@
   "devDependencies": {
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
+    "enzyme-to-json": "^3.4.0",
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-prettier": "^3.1.0",
     "prettier": "^1.18.2",
