--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,7 @@
 {
   "extends": ["react-app", "plugin:prettier/recommended"],
   "rules": {
-    "no-console": "warn"
+    "no-console": "warn",
+    "no-var": "warn"
   }
 }
