--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,4 +1,8 @@
 {
   "plugins": ["stylelint-scss"],
-  "extends": "stylelint-config-recommended"
+  "extends": "stylelint-config-recommended",
+  "rules": {
+    "at-rule-no-unknown": null,
+    "scss/at-rule-no-unknown": true
+  }
 }
